updated bio sec, contact info and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
         max-width: 700px;
         justify-content: center;
         margin: 20px 10px 10px 25px;
+        border-radius: 8px;
       }
       .navbar-brand {
         background-color: rgb(81, 168, 168);
@@ -97,11 +98,25 @@
       <div class="row image-group">
         <div class="col image-div">
           <img
-            src="https://www.webfx.com/blog/images/cdn.designinstruct.com/files/582-how-to-image-placeholders/generic-image-placeholder.png"
-            alt="Responsive image"
+            src="./Project-one.png" width="300" height="200"
+            alt="project-one-screenshots">
+            <a href="https://justinkvang.github.io/Deliciously/">https://justinkvang.github.io/Deliciously/></a>
+        </div>
+        <div class="col image-div">
+          <img
+            src="./Ethiopia-quiz.png" width="300" height="200"
+            alt="Ethiopain-quiz">
+            <a href="https://cmabdulkadir.github.io/Ethiopia_Quiz/">https://cmabdulkadir.github.io/Ethiopia_Quiz/</a>
           />
         </div>
         <div class="col image-div">
+          <img
+            src="./workday.png" width="300" height="200"
+            alt="workday-scheduler">
+            <a href="https://cmabdulkadir.github.io/Work_Day_Scheduler/">https://cmabdulkadir.github.io/Work_Day_Scheduler/</a>
+          />
+        </div>
+        <!-- <div class="col image-div">
           <img
             src="https://www.webfx.com/blog/images/cdn.designinstruct.com/files/582-how-to-image-placeholders/generic-image-placeholder.png"
             alt="Responsive image"
@@ -112,19 +127,7 @@
             src="https://www.webfx.com/blog/images/cdn.designinstruct.com/files/582-how-to-image-placeholders/generic-image-placeholder.png"
             alt="Responsive image"
           />
-        </div>
-        <div class="col image-div">
-          <img
-            src="https://www.webfx.com/blog/images/cdn.designinstruct.com/files/582-how-to-image-placeholders/generic-image-placeholder.png"
-            alt="Responsive image"
-          />
-        </div>
-        <div class="col image-div">
-          <img
-            src="https://www.webfx.com/blog/images/cdn.designinstruct.com/files/582-how-to-image-placeholders/generic-image-placeholder.png"
-            alt="Responsive image"
-          />
-        </div>
+        </div> -->
       </div>
     </div>
     <footer>&copy copyright</footer>
