--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
             margin-right: 20px;
             margin-top: 40px;
             padding: 20px;
+            border-radius: 8px;
     
         }
       .navbar-brand {
@@ -71,6 +72,10 @@
         border-radius: 0px;
         border:rgb(81, 168, 168) ;
       }
+
+      p{
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -100,7 +105,24 @@
     <div class="jumbotron">
             <h3 class="display-4">Contact</h3>
           <hr>
+          <p>
+            <a href="https://cmabdulkadir.github.io/">https://cmabdulkadir.github.io/</a>
+          </p>
+          <p>
+            <a href="chaltumabdulkadir@gmail.com">chaltumabdulkadir@gmail.com</a>
+          </p>
+          <p>
+            <a href="https://www.linkedin.com/in/chaltu-abdulkadir"> 
+            <img src="./linkedin.png" alt="linkedin" width="70">
+            </a>
+          </p>
+          <p> 
+            <a href="https://github.com/cmabdulkadir">
+            <img src="./github.jpg" alt="github" width="70">
+            </a>
+          </p>
 
+<!-- 
         <form>
           <div class="form-group">
             <label for="formGroupExampleInput">Name</label>
@@ -131,7 +153,7 @@
           <div>
             <button type="button" class="btn btn-primary">Submit</button>
           </div>
-        </form>
+        </form> -->
       </div>
     <footer>&copy copyright</footer>
   </body>
