updated contact info and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,25 +97,32 @@
       <hr />
       <div class="row image-group">
         <div class="col image-div">
+          <h4>Deliciously</h4>
           <img
             src="./Project-one.png" width="300" height="200"
             alt="project-one-screenshots">
-            <a href="https://justinkvang.github.io/Deliciously/">https://justinkvang.github.io/Deliciously/></a>
-        </div>
+            <a href="https://github.com/justinkvang/Deliciously">https://github.com/justinkvang/Deliciously</a>
+            <br>
+            <a href="https://justinkvang.github.io/Deliciously/">https://justinkvang.github.io/Deliciously/</a>
+          </div>
         <div class="col image-div">
+          <h4>Ethiopia Quiz</h4>
           <img
             src="./Ethiopia-quiz.png" width="300" height="200"
             alt="Ethiopain-quiz">
             <a href="https://cmabdulkadir.github.io/Ethiopia_Quiz/">https://cmabdulkadir.github.io/Ethiopia_Quiz/</a>
-          />
+            <a href="https://github.com/cmabdulkadir/Ethiopia_Quiz">https://github.com/cmabdulkadir/Ethiopia_Quiz</a>
         </div>
         <div class="col image-div">
+          <h4>Workday Scheduler</h4>
           <img
             src="./workday.png" width="300" height="200"
             alt="workday-scheduler">
             <a href="https://cmabdulkadir.github.io/Work_Day_Scheduler/">https://cmabdulkadir.github.io/Work_Day_Scheduler/</a>
-          />
+            <a href="https://github.com/cmabdulkadir/Work_Day_Scheduler">https://github.com/cmabdulkadir/Work_Day_Scheduler</a>
+        
         </div>
+    
         <!-- <div class="col image-div">
           <img
             src="https://www.webfx.com/blog/images/cdn.designinstruct.com/files/582-how-to-image-placeholders/generic-image-placeholder.png"
