--- a/contact.html
+++ b/contact.html
@@ -106,13 +106,18 @@
             <h3 class="display-4">Contact</h3>
           <hr>
           <p>
+            Resume: 
             <a href="https://cmabdulkadir.github.io/">https://cmabdulkadir.github.io/</a>
           </p>
           <p>
+            Email: 
             <a href="chaltumabdulkadir@gmail.com">chaltumabdulkadir@gmail.com</a>
           </p>
           <p>
-            <a href="https://www.linkedin.com/in/chaltu-abdulkadir"> 
+            Phone Number: 612-258-9757
+          </p>
+          <p>
+            <a href="https://www.linkedin.com/in/chaltu-abdulkadir-16541995/"> 
             <img src="./linkedin.png" alt="linkedin" width="70">
             </a>
           </p>
@@ -121,39 +126,6 @@
             <img src="./github.jpg" alt="github" width="70">
             </a>
           </p>
-
-<!-- 
-        <form>
-          <div class="form-group">
-            <label for="formGroupExampleInput">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="formGroupExampleInput"
-              placeholder="Name"
-            />
-          </div>
-          <div class="form-group">
-            <label for="formGroupExampleInput2">Email</label>
-            <input
-              type="text"
-              class="form-control"
-              id="formGroupExampleInput2"
-              placeholder="Email"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Message</label>
-            <textarea
-              class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-            ></textarea>
-          </div>
-          <div>
-            <button type="button" class="btn btn-primary">Submit</button>
-          </div>
-        </form> -->
       </div>
     <footer>&copy copyright</footer>
   </body>
